# llm_mlops

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
deploy/: build.sh  eks-sample-deployment.yaml  eks-sample-service.yaml  llmops-service.yaml
model/: get_model.sh
src/: main.rs
